--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,5 @@ body {
   /* font-family: 'PT Sans Narrow', sans-serif; */
   font-family: 'Source Sans Pro', sans-serif;
   /* color: bisque; */
+  background-image: linear-gradient(to right, #d2ddef, #ecd7de);
 }
