--- a/src/components/gallery-preview/gallery-preview.styles.css
+++ b/src/components/gallery-preview/gallery-preview.styles.css
@@ -1,13 +1,16 @@
-
+.gallery-preview-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .gallery-preview-image-container{
     display: flex;
     justify-content: space-between;
-    width: 90%;
+    width: 85%;
     margin: 0 auto;
-    
 }
 
 .gallery-preview-image-container img{
-    border-radius: 10px;
+    border-radius: 5px;
 }
